--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-国内用户被屏蔽
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link type="text/css" href="css/test.css" />
+    
+    <script src="js/test.js"></script>
+  </head>
+  <body>
+  你好,有什么需要帮助的?
+  hi,what can i do for you?
+  </body>
+</html>
