--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
   你好,有什么需要帮助的?
   hi,what can i do for you?
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "kp21hsiw8m");
+</script>
   </body>
 </html>
